--- a/templates/index.html
+++ b/templates/index.html
@@ -5,14 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Email Sending API</title>
+
+    <!--CSS-->
+    <link rel="icon" href="/static/favicon.ico">
+
 </head>
 <body>
     <h1>Email Sending API</h1>
 
     <h2>Information</h2>
 
-    <p>This is an email sending API service that can only be used by me.</p>
+    <p>This is an email sending API service that <strong>can only be used by me.</strong></p>
 
-    <p>If you're not me. GET OUT</p>
+    <p>If you're not me. <strong>GET OUT.</strong></p>
 </body>
 </html>
